<resources  xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
    <string name="action_first_grade">First grade</string>
    <string name="action_second_grade">Second grade</string>
    <string name="action_third_grade">Third grade</string>
    <string name="action_settings">Settings</string>
    <string name="action_game_fast_calc">Calculate</string>
    <string name="action_game_puzzle">Find result</string>
    <string name="action_dress_up">Dress up (points: <xliff:g id="points" example="10" >%d</xliff:g>)</string>
    <string name="action_next_badge">Next:
        <xliff:g id="badge" example="Page" >%s</xliff:g>
        <xliff:g id="progress" example="1" >%d</xliff:g>/<xliff:g id="max" example="10" >%d</xliff:g>
    </string>
    <string name="action_badges">Badges:
        <xliff:g id="gold" example="0" >%d</xliff:g> -
        <xliff:g id="silver" example="1" >%d</xliff:g> -
        <xliff:g id="bronze" example="5" >%d</xliff:g>
    </string>
    <string name="action_info">Information</string>
    <string name="action_credits">Credits</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_blog">LeliMath blog</string>
    <string name="action_project">Bugs &amp; improvements</string>
    <string name="action_next_formula">Next</string>
    <string name="symbol_PLUS">+</string>
    <string name="symbol_MINUS">-</string>
    <string name="symbol_MULTIPLY">×</string>
    <string name="symbol_DIVIDE">÷</string>
    <string name="symbol_Backspace">←</string>
    <string name="operation_all">All</string>
    <string name="operation_plus">Addition</string>
    <string name="operation_minus">Subtraction</string>
    <string name="operation_plus_minus">Addition and subtraction</string>
    <string name="operation_multiply">Multiplication</string>
    <string name="operation_divide">Division</string>
    <string name="operation_multiply_divide">Multiplication and division</string>
    <string name="level_TRIVIAL">Trivial</string>
    <string name="level_EASY">Easy</string>
    <string name="level_NORMAL">Normal</string>
    <string name="level_HARD">Hard</string>
    <string name="level_GENIUS">Genius</string>
    <string name="tab_home">Home</string>
    <string name="tab_badges">Badges</string>
    <string name="tab_log">Log</string>
    <string name="title_academy">Academy</string>
    <string name="title_score">Score</string>
    <string name="title_practice">Practice</string>
    <string name="title_other">Other</string>
    <string name="title_badge">Badge</string>
    <string name="title_dress_up">Dress up</string>
    <string name="dialog_buy_part">Buy?</string>
    <string name="title_available_points">Points: <xliff:g id="points" example="10" >%d</xliff:g></string>
    <string name="caption_price">Price: <xliff:g id="points" example="10" >%d</xliff:g></string>
    <string name="caption_progress">Progress</string>
    <string name="caption_awarded">Awarded</string>
    <string name="caption_new">New</string>
    <string name="caption_game_completed">Finished!</string>
    <string name="caption_game_completed_good">Well done!</string>
    <string name="caption_game_completed_great">Excellent job!</string>
    <string name="caption_points">Points: <xliff:g id="points" example="10" >%d</xliff:g></string>
    <string name="message_badge_progress"><xliff:g id="current" example="1" >%d</xliff:g> of <xliff:g id="total" example="5" >%d</xliff:g></string>
    <string name="message_badge_not_awarded">Not yet</string>
    <string name="script_progress"><xliff:g id="current" example="1" >%d</xliff:g> / <xliff:g id="total" example="5" >%d</xliff:g></string>
    <string name="pref_game_complexity">Difficulty</string>
    <string name="pref_title_operations">Operations</string>
    <string name="pref_build_number_title">Build date</string>
    <string name="pref_enter_values">Enter allowed values. Use a comma to separate numbers, define a range with a dash.</string>
    <string name="pref_title_operation_plus">Enable addition</string>
    <string name="pref_title_plus_first_arg">First addend</string>
    <string name="pref_title_plus_second_arg">Second addend</string>
    <string name="pref_title_plus_result">Sum</string>
    <string name="pref_title_operation_minus">Enable subtraction</string>
    <string name="pref_title_minus_first_arg">Minuend</string>
    <string name="pref_title_minus_second_arg">Subtrahend</string>
    <string name="pref_title_minus_result">Difference</string>
    <string name="pref_title_operation_multiply">Enable multiplication</string>
    <string name="pref_title_multiply_first_arg">First factor</string>
    <string name="pref_title_multiply_second_arg">Second factor</string>
    <string name="pref_title_multiply_result">Product</string>
    <string name="pref_title_operation_divide">Enable division</string>
    <string name="pref_title_divide_first_arg">Dividend</string>
    <string name="pref_title_divide_second_arg">Divisor</string>
    <string name="pref_title_divide_result">Quotient</string>
    <string name="pref_title_operation_depend_on">Use value from</string>
    <string name="pref_value_not_depend">Custom values</string>
    <string name="pref_operation_dependencies">Operation <xliff:g id="operation" example="Division" >%s</xliff:g> is used by: </string>
    <string name="pref_operation_enabled">Enabled</string>
    <string name="pref_operation_disabled">Disabled</string>
    <string name="pref_title_fast_calc_unknown">Unknown in Calculate</string>
    <string name="pref_title_first_arg">First argument</string>
    <string name="pref_title_second_arg">Second argument</string>
    <string name="pref_title_operation">Operation</string>
    <string name="pref_title_result">Result</string>
    <string name="pref_title_simple_settings">Simple settings</string>
    <string name="pref_category_settings">Settings</string>
    <string name="pref_next_badge">Next badge</string>
    <string name="pref_sound_state">Sound</string>
    <string name="pref_sound_muted">Muted</string>
    <string name="pref_sound_current_level">Volume <xliff:g id="level" example="33" >%d</xliff:g>%%</string>
    <string name="pref_sound_level">Volume</string>
    <string name="pref_sound_level_message">Set volume for sound effects</string>
    <string name="pref_category_about">About app</string>
    <string name="pref_app_version">Version</string>
    <string name="pref_build_time">Build</string>
    <string name="pref_operation_help_title">Help</string>
    <string name="pref_badge_progress">
        <xliff:g id="badge" example="Page" >%s</xliff:g>
        (<xliff:g id="progress" example="1" >%d</xliff:g> / <xliff:g id="max" example="10" >%d</xliff:g>)
    </string>
    <string name="error_empty_argument">Empty argument is forbidden</string>
    <string name="error_values_must_be_bigger">Every number must be greater than the previous</string>
    <string name="value_allowed_digits">0123456789-,</string>
    <string name="error_values_not_number">Illegal number: \'%s\'</string>
    <string name="error_values_undefined_first">Range is missing the first number</string>
    <string name="error_values_undefined_second">Range is missing the second number</string>
    <string name="error_no_formula_generated">No formula generated. Check settings.</string>
    <string name="permission_fs_rationale">App requires disk access</string>
    <string name="button_allow">Enable</string>
    <string name="button_deny">Disable</string>
    <string name="permission_fs_denied">Some features will not work without disk access.</string>
    <string name="permission_fs_neverask">Some features will not work without disk access. You can change your decision in system settings.</string>
    <string name="message_badge_received">Points: %2$d, new badges: %1$d</string>
    <string name="badge_title_PAGE">Page</string>
    <string name="badge_desc_PAGE">First solved task with normal or easier difficulty</string>
    <string name="badge_title_KNIGHT">Knight</string>
    <string name="badge_desc_KNIGHT">25 solved tasks with normal or easier difficulty</string>
    <string name="badge_title_PALADIN">Paladin</string>
    <string name="badge_desc_PALADIN">100 solved tasks with normal or easier difficulty</string>
    <string name="badge_title_GLADIATOR">Gladiator</string>
    <string name="badge_desc_GLADIATOR">First solved task with hard or genius difficulty</string>
    <string name="badge_title_VIKING">Viking</string>
    <string name="badge_desc_VIKING">25 solved tasks with hard or genius difficulty</string>
    <string name="badge_title_SAMURAI">Samurai</string>
    <string name="badge_desc_SAMURAI">100 solved tasks with hard or genius difficulty</string>
    <string name="badge_title_RETURNER">Returner</string>
    <string name="badge_desc_RETURNER">10 correctly solved formulas within two consecutive days</string>
    <string name="badge_title_LONG_DISTANCE_RUNNER">Long distance runner</string>
    <string name="badge_desc_LONG_DISTANCE_RUNNER">10 correctly solved formulas within seven consecutive days</string>
    <string name="badge_title_MARATHON_RUNNER">Marathon runner</string>
    <string name="badge_desc_MARATHON_RUNNER">10 correctly solved formulas within 30 following days</string>
    <string name="badge_title_GOOD_SUMMATION">Good addition</string>
    <string name="badge_desc_GOOD_SUMMATION">10 correctly solved additions in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_GREAT_SUMMATION">Great addition</string>
    <string name="badge_desc_GREAT_SUMMATION">25 correctly solved additions in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_EXCELLENT_SUMMATION">Excellent addition</string>
    <string name="badge_desc_EXCELLENT_SUMMATION">100 correctly solved additions in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_GOOD_SUBTRACTION">Good subtraction</string>
    <string name="badge_desc_GOOD_SUBTRACTION">10 correctly solved subtractions in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_GREAT_SUBTRACTION">Great subtraction</string>
    <string name="badge_desc_GREAT_SUBTRACTION">25 correctly solved subtractions in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_EXCELLENT_SUBTRACTION">Excellent subtraction</string>
    <string name="badge_desc_EXCELLENT_SUBTRACTION">100 correctly solved subtractions in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_GOOD_MULTIPLICATION">Good multiplication</string>
    <string name="badge_desc_GOOD_MULTIPLICATION">10 correctly solved multiplications in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_GREAT_MULTIPLICATION">Great multiplication</string>
    <string name="badge_desc_GREAT_MULTIPLICATION">25 correctly solved multiplications in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_EXCELLENT_MULTIPLICATION">Excellent multiplication</string>
    <string name="badge_desc_EXCELLENT_MULTIPLICATION">100 correctly solved multiplications in a row without a mistake. The same formula is counted just once. It can be awarded for multiple series.</string>
    <string name="badge_title_GOOD_DIVISION">Good division</string>
</resources>